microservices-demo/k8s/workloads.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adservice
  namespace: microservices-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adservice
  template:
    metadata:
      labels:
        app: adservice
    spec:
      containers:
        - name: adservice
          image: microservices-demo/adservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 9555
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: adservice
  namespace: microservices-demo
spec:
  selector:
    app: adservice
  ports:
    - name: grpc
      port: 9555
      targetPort: 9555
      appProtocol: grpc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice
  namespace: microservices-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cartservice
  template:
    metadata:
      labels:
        app: cartservice
    spec:
      containers:
        - name: cartservice
          image: microservices-demo/cartservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7070
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: cartservice
  namespace: microservices-demo
spec:
  selector:
    app: cartservice
  ports:
    - name: http
      port: 7070
      targetPort: 7070
      appProtocol: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice
  namespace: microservices-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkoutservice
  template:
    metadata:
      labels:
        app: checkoutservice
    spec:
      containers:
        - name: checkoutservice
          image: microservices-demo/checkoutservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 5050
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice
  namespace: microservices-demo
spec:
  selector:
    app: checkoutservice
  ports:
    - name: grpc
      port: 5050
      targetPort: 5050
      appProtocol: grpc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencyservice
  namespace: microservices-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: currencyservice
  template:
    metadata:
      labels:
        app: currencyservice
    spec:
      containers:
        - name: currencyservice
          image: microservices-demo/currencyservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 7000
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: currencyservice
  namespace: microservices-demo
spec:
  selector:
    app: currencyservice
  ports:
    - name: grpc
      port: 7000
      targetPort: 7000
      appProtocol: grpc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emailservice
  namespace: microservices-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emailservice
  template:
    metadata:
      labels:
        app: emailservice
    spec:
      containers:
        - name: emailservice
          image: microservices-demo/emailservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: emailservice
  namespace: microservices-demo
spec:
  selector:
    app: emailservice
  ports:
    - name: grpc
      port: 8080
      targetPort: 8080
      appProtocol: grpc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: microservices-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: microservices-demo/frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: microservices-demo
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      appProtocol: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgenerator
  namespace: microservices-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loadgenerator
  template:
    metadata:
      labels:
        app: loadgenerator
    spec:
      containers:
        - name: loadgenerator
          image: microservices-demo/loadgenerator:latest
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice
  namespace: microservices-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paymentservice
  template:
    metadata:
      labels:
        app: paymentservice
    spec:
      containers:
        - name: paymentservice
          image: microservices-demo/paymentservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 50051
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice
  namespace: microservices-demo
spec:
  selector:
    app: paymentservice
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
      appProtocol: grpc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productcatalogservice
  namespace: microservices-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productcatalogservice
  template:
    metadata:
      labels:
        app: productcatalogservice
    spec:
      containers:
        - name: productcatalogservice
          image: microservices-demo/productcatalogservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 3550
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice
  namespace: microservices-demo
spec:
  selector:
    app: productcatalogservice
  ports:
    - name: grpc
      port: 3550
      targetPort: 3550
      appProtocol: grpc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendationservice
  namespace: microservices-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendationservice
  template:
    metadata:
      labels:
        app: recommendationservice
    spec:
      containers:
        - name: recommendationservice
          image: microservices-demo/recommendationservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice
  namespace: microservices-demo
spec:
  selector:
    app: recommendationservice
  ports:
    - name: grpc
      port: 8080
      targetPort: 8080
      appProtocol: grpc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shippingservice
  namespace: microservices-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shippingservice
  template:
    metadata:
      labels:
        app: shippingservice
    spec:
      containers:
        - name: shippingservice
          image: microservices-demo/shippingservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 50051
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: shippingservice
  namespace: microservices-demo
spec:
  selector:
    app: shippingservice
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
      appProtocol: grpc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppingassistantservice
  namespace: microservices-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shoppingassistantservice
  template:
    metadata:
      labels:
        app: shoppingassistantservice
    spec:
      containers:
        - name: shoppingassistantservice
          image: microservices-demo/shoppingassistantservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: shoppingassistantservice
  namespace: microservices-demo
spec:
  selector:
    app: shoppingassistantservice
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      appProtocol: http
