microservices-demo/k8s/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: microservices-demo
spec:
  mtls:
    mode: STRICT
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: microservices-demo-gateway
  namespace: microservices-demo
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
  namespace: microservices-demo
spec:
  hosts:
    - "*"
  gateways:
    - microservices-demo-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend.microservices-demo.svc.cluster.local
            port:
              number: 8080
